--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -128,7 +128,7 @@
 
 
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/dumps" id="doormat">
 								<div class="doormat__title">
 									RDF-dump CRAB-LOD
 								</div>
@@ -137,7 +137,7 @@
 
 
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="/ns.html#vocabularia" id="doormat">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://pwc-technology-be.github.io/oslo/data.vlaanderen.be/ns.html#vocabularia" id="doormat">
 								<div class="doormat__title">
 									Vocabularia
 								</div>
@@ -146,7 +146,7 @@
 
 
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="/ns.html#applicatieprofielen" id="doormat">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://pwc-technology-be.github.io/oslo/data.vlaanderen.be/ns.html#applicatieprofielen" id="doormat">
 								<div class="doormat__title">
 									Applicatieprofielen
 								</div>
