Nieuwe versie vocabularium document

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <li><a href="data.vlaanderen.be/index.html" target="_blank">Home pagina</a></li>
     <li><a href="data.vlaanderen.be/index2.html" target="_blank">Home pagina variant</a></li>
     <li><a href="data.vlaanderen.be/ns.html" target="_blank">ns</a></li>
+    <li><a href="melding/melding-test.html" target="_blank">Update vocabularium (Melding)</a></li>
   </ul>
 </body>
 </html>
