tidy html (leesbaarheid)

--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -179,9 +179,11 @@
 					</header>
 
 
-					<div class="info-block__content">			
+					<div class="info-block__content">
 						<p>Data.Vlaanderen.be voorziet de volgende toegangsmethoden tot de data:</p>
 						<br>
+
+
 						<ul class="bullet-list bullet-list--tag">
 							<li class="bullet-list__item">
 								<strong>Content negotatie</strong> De URI <a href="http://data.vlaanderen.be/id/adres/2185403">http://data.vlaanderen.be/id/adres/2185403</a> is de persistente identifier voor het adres Koningin Maria Hendrikaplein 70, Gent. Als deze URI opgevraagd wordt via een webbrowser dan verkrijgt men een menselijk leesbare webpagina waarop informatie over dit adres wordt weergegeven. Dezelfde informatie is ook aangeboden in machine-leesbare vorm zoals RDF. Reeds ondersteunde HTTP accept headers zijn text/html, application/rdf+xml, text/ntriples en text/turtle. Voor documenten en vocabularia worden de file-extenties .rdf, .nt en .ttl ook ondersteund als alternatief voor het instellen van de HTTP accept header.
@@ -204,50 +206,55 @@
 						</ul>
 					</div>
 					<br>
+
+
 					<h3 class="h3">Beschikbare datasets</h3>
-
-
 					<!-- component -->
-			        <div class="grid grid--is-stacked u-spacer">
-			          	<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
-				            <a href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" class="spotlight">
-				            	<article>
-				                	<header class="spotlight__header">
-				                  		<div class="spotlight__image spotlight__image--focus-center-center">
-				                    		<img class="spotlight__image__img" src="file:///C:/Users/vandeloc/Documents/Documents/AIV/AIV%20-%20PwC%20GitHub/data.vlaanderen.be/images/map-small.png" alt="">
-				                  		</div>
-				                  		<div class="spotlight__title-wrapper">
-				                    		<h1 class="spotlight__title">Beta release CRAB-LOD</h1>
-				                    	</div>
-				                	</header>
-				                	<div class="spotlight__text">
-				                		Een eerste dataset die ontsloten wordt op dit domein zijn de adressen uit het adressenregister (CRAB). De beschikbare URI's van de CRAB-LOD dataset komen van een snapshot welke gedurende de BETA-periode op beperkte wijze gesynchroniseerd wordt gehouden met de gegevens uit het basisregister.
-				                	</div>
-				              	</article>
-				            </a>
-			          	</div>
 
-			          	<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
-			          		<a href="http://lokaalbestuur.vlaanderen.be/lokale-besluiten-als-gelinkte-open-data" class="spotlight">
-				            	<article>
-				                	<header class="spotlight__header">
-				                  		<div class="spotlight__image spotlight__image--focus-center-center">
-				                    		<img class="spotlight__image__img" src="file:///C:/Users/vandeloc/Documents/Documents/AIV/AIV%20-%20PwC%20GitHub/data.vlaanderen.be/images/files-small.png" alt="">
-				                  		</div>
-				                  		<div class="spotlight__title-wrapper">
-				                    		<h1 class="spotlight__title">LBLOD</h1>
-				                    	</div>
-				                	</header>
-				                	<div class="spotlight__text">
-				                		Het project heeft als doel informatie uit besluiten van lokale besturen vindbaar te maken en op een gestandaardiseerde manier aan te bieden waardoor iedereen (andere overheden, ondernemingen, …) rechtstreeks met de data aan de slag kan gaan.
-				                	</div>
-				              	</article>
-			              	</a>
-			          	</div>
 
-			        </div>
-			        <!-- end component -->
+					<div class="grid grid--is-stacked u-spacer">
+						<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
+							<a class="spotlight" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data">
+							<article>
+								<header class="spotlight__header">
+									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="file:///C:/Users/vandeloc/Documents/Documents/AIV/AIV%20-%20PwC%20GitHub/data.vlaanderen.be/images/map-small.png">
+									</div>
 
+
+									<div class="spotlight__title-wrapper">
+										<h1 class="spotlight__title">Beta release CRAB-LOD</h1>
+									</div>
+								</header>
+
+
+								<div class="spotlight__text">
+									Een eerste dataset die ontsloten wordt op dit domein zijn de adressen uit het adressenregister (CRAB). De beschikbare URI's van de CRAB-LOD dataset komen van een snapshot welke gedurende de BETA-periode op beperkte wijze gesynchroniseerd wordt gehouden met de gegevens uit het basisregister.
+								</div>
+							</article></a>
+						</div>
+
+
+						<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
+							<a class="spotlight" href="http://lokaalbestuur.vlaanderen.be/lokale-besluiten-als-gelinkte-open-data">
+							<article>
+								<header class="spotlight__header">
+									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="file:///C:/Users/vandeloc/Documents/Documents/AIV/AIV%20-%20PwC%20GitHub/data.vlaanderen.be/images/files-small.png">
+									</div>
+
+
+									<div class="spotlight__title-wrapper">
+										<h1 class="spotlight__title">LBLOD</h1>
+									</div>
+								</header>
+
+
+								<div class="spotlight__text">
+									Het project heeft als doel informatie uit besluiten van lokale besturen vindbaar te maken en op een gestandaardiseerde manier aan te bieden waardoor iedereen (andere overheden, ondernemingen, …) rechtstreeks met de data aan de slag kan gaan.
+								</div>
+							</article></a>
+						</div>
+					</div>
+					<!-- end component -->
 				</div>
 			</section>
 
@@ -256,47 +263,42 @@
 				<div class="layout layout--wide">
 					<h2 class="h2 u-named-anchor" id="Standaarden">Standaarden</h2>
 
-					<h3 class="h3">URI standaard</h2>
 
-						<p>
-							Centraal in de URI-standaard staan een aantal vormregels die omschrijven op welke wijze je een URI moet opbouwen. Gebruik makend van de vormregels voor URI’s zal via de URI-standaard een lijst van resource-classificaties toegelicht worden. Die moeten alle resource-aanbieders binnen de Vlaamse overheden gebruiken bij het opzetten van nieuwe URI’s om hun resources uniek en persistent te ontsluiten.
-						</p>
-						<br>
-						<a href="https://overheid.vlaanderen.be/OSLO-URI-standaard" class="link--icon--caret link--block">
-							Ontdek hier meer over de Vlaamse URI standaard.
-						</a>
-						<br>
+					<h3 class="h3">URI standaard</h3>
+
+
+					<p>Centraal in de URI-standaard staan een aantal vormregels die omschrijven op welke wijze je een URI moet opbouwen. Gebruik makend van de vormregels voor URI’s zal via de URI-standaard een lijst van resource-classificaties toegelicht worden. Die moeten alle resource-aanbieders binnen de Vlaamse overheden gebruiken bij het opzetten van nieuwe URI’s om hun resources uniek en persistent te ontsluiten.</p>
+					<br>
+					<a class="link--icon--caret link--block" href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Ontdek hier meer over de Vlaamse URI standaard.</a><br>
+
 
 					<h3 class="h3">API standaard</h3>
 
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-						<br>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<br>
+
 
 					<h3 class="h3">OSLO&#178; Specificaties (kandidaat-standaarden)</h3>
 
-						<p>
-							Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO&#178; van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO&#178; specificaties gepromoot tot volwaardige standaarden.
-						</p>
-						<br>
-						<p> 
-							Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
-						<br>
 
-						<a href="https://pwc-technology-be.github.io/oslo/data.vlaanderen.be/ns.html" class="link--icon--caret link--block">
-							Ontdek hier de beschikbare vocabularia en applicatieprofielen.
-						</a>
+					<p>Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO&#178; van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO&#178; specificaties gepromoot tot volwaardige standaarden.</p>
+					<br>
+
+
+					<p>Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
+					<br>
+					<a class="link--icon--caret link--block" href="https://pwc-technology-be.github.io/oslo/data.vlaanderen.be/ns.html">Ontdek hier de beschikbare vocabularia en applicatieprofielen.</a>
 				</div>
 			</section>
+
 
 			<section class="region" id="Tools">
 				<div class="layout layout--wide">
 					<h2 class="h2 u-named-anchor" id="Tools">Tools</h2>
-				
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
+
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 				</div>
 			</section>
 
@@ -371,6 +373,8 @@
 											<div class="col--8-12 col--12-12--s col--6-12--l">
 												<div class="content typography">
 													<p>Vocabularia beschrijven semantiek, de concepten die beschreven worden zijn bruikbaar in verschillende toepassingsdomeinen. Applicatieprofielen zijn specificaties voor gegevensuitwisseling in bepaalde use cases. De OSLO&#178; vocabularia en applicatieprofielen zijn gepubliceerd als kandidaat-standaarden.</p>
+
+
 													<p>Lees hierover meer op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
 												</div>
 											</div>
