--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -51,7 +51,7 @@
 						<div class="col--8-12 col--12-12--s">
 							<div class="typography introduction">
 								Semantische afstemming zorgt er voor dat informatiemodellen gebruik maken van eenduidige termen waar een bijbehorende definitie kan voor opgezocht worden. Dit komt interoperabiliteit tussen toepassingen ten goede door dubbelzinnigheid en onduidelijkheid te elimineren. Daarnaast zorgt het voor breder gedragen informatiemodellen door silodenken te vermijden. Ontdek hier de beschikbare vocabularia en applicatieprofielen, alsook codelijsten.
-							</div>	
+							</div>
 							<br>
 						</div>
 
@@ -79,7 +79,6 @@
 										</ul>
 									</div>
 
-
 									<div class="side-navigation__group side-navigation__group--has-title">
 										<div class="side-navigation__title">
 											Lees ook
@@ -90,6 +89,7 @@
 											<li class="side-navigation__item">
 												<a class="link--icon--caret link--icon--block" href="https://overheid.vlaanderen.be/producten-diensten/OSLO2" target="_blank">OSLO²</a>
 											</li>
+
 											<li class="side-navigation__item">
 												<a class="link--icon--caret link--icon--block" href="https://docs.google.com/document/d/1tbK17wmgkIlNOXjYRE3Arf3PMI--8TvidBprKOcgcvQ/edit?usp=sharing" target="_blank">Handleiding</a>
 											</li>
@@ -102,25 +102,38 @@
 				</div>
 			</section>
 
+
 			<section class="region">
 				<div class="layout layout--wide">
-					<p>Een applicatieprofiel is een specificatie voor gegevensuitwisseling voor applicaties die een bepaalde use case vervullen. Het laat toe om bijkomende restricties op te leggen, zoals het vastleggen van kardinaliteiten of het gebruik van bepaalde codelijsten. Een applicatieprofiel kan dienen als documentatie voor analisten en ontwikkelaars.</p><br>
+					<p>Een applicatieprofiel is een specificatie voor gegevensuitwisseling voor applicaties die een bepaalde use case vervullen. Het laat toe om bijkomende restricties op te leggen, zoals het vastleggen van kardinaliteiten of het gebruik van bepaalde codelijsten. Een applicatieprofiel kan dienen als documentatie voor analisten en ontwikkelaars.</p>
+					<br>
 
-					<p>De vocabularia op deze pagina zijn de basis voor open semantische informatiestandaarden, ze bieden een gedeeld begrippenkader voor bepaalde concepten met een focus op gegevensuitwisseling en zijn tot stand gekomen in de werkgroep <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2" target="_blank">OSLO²</a> van Informatie Vlaanderen.</p><br>
 
-					<p>De informatie in de vocabularia en applicatieprofielen is georganiseerd volgens het <a href="http://www.w3.org/TR/2004/REC-rdf-primer-20040210/" target="_blank">Resource Description Framework (RDF)</a>, wat ze geschikt maakt voor gebruik in Linked Data toepassingen.</a></p><br>
+					<p>De vocabularia op deze pagina zijn de basis voor open semantische informatiestandaarden, ze bieden een gedeeld begrippenkader voor bepaalde concepten met een focus op gegevensuitwisseling en zijn tot stand gekomen in de werkgroep <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2" target="_blank">OSLO²</a> van Informatie Vlaanderen.</p>
+					<br>
+
+
+					<p>De informatie in de vocabularia en applicatieprofielen is georganiseerd volgens het <a href="http://www.w3.org/TR/2004/REC-rdf-primer-20040210/" target="_blank">Resource Description Framework (RDF)</a>, wat ze geschikt maakt voor gebruik in Linked Data toepassingen.</p>
+					<br>
 
 
 					<div class="alert alert--cta">
-			          	<div class="alert__content">
-			            	<div class="alert__title">Op 31 maart 2017 werden deze vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen.</div>
-			            		<div class="alert__message">
-			              			<p>Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO² specificaties gepromoot tot volwaardige standaarden.</p><br>
-									<p>Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
-			            	</div>
-			          	</div>
-			        </div>
-			    </div>
+						<div class="alert__content">
+							<div class="alert__title">
+								Op 31 maart 2017 werden deze vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen.
+							</div>
+
+
+							<div class="alert__message">
+								<p>Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO² specificaties gepromoot tot volwaardige standaarden.</p>
+								<br>
+
+
+								<p>Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
 
@@ -132,8 +145,6 @@
 
 
 					<div class="info-block__content">
-
-
 						<div id="doormats">
 							<ul class="grid grid--is-stacked js-equal-height-container">
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
@@ -185,6 +196,7 @@
 				</div>
 			</section>
 
+
 			<section class="info-block info-block--news" id="Vocabularia">
 				<div class="layout layout--wide">
 					<header class="info-block__header">
@@ -193,8 +205,6 @@
 
 
 					<div class="info-block__content">
-
-
 						<div id="doormats">
 							<ul class="grid grid--is-stacked js-equal-height-container">
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
@@ -246,59 +256,65 @@
 				</div>
 			</section>
 
+
 			<section class="info-block info-block--news" id="Codelijsten">
 				<div class="layout layout--wide">
 					<header class="info-block__header">
 						<h1 class="info-block__title">Codelijsten</h1>
 					</header>
 
-					<p>Raadpleeg hier de beschikbare codelijsten per applicatieprofiel.</p><br>
+					<p>Raadpleeg hier de beschikbare codelijsten per applicatieprofiel.</p>
+					<br>
 
-					<p>De volgende applicatieprofielen definiëren geen codelijsten: Generiek Basis, Adresregister, Organisatie Basis, Persoon Basis, Dienstencataloog, Persoon Burgerloket.</p><br>
-					
+					<p>De volgende applicatieprofielen definiëren geen codelijsten: Generiek Basis, Adresregister, Organisatie Basis, Persoon Basis, Dienstencataloog, Persoon Burgerloket.</p>
+					<br>
+
 					<div class="info-block__content">
 						<div class="grid">
 							<!-- component -->
-					         <ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-					        	<li class="u-hr"><h5 class="h5">Dienstverlening Transactiemodel</h5></li>
-					          	<li><a class="link--icon--caret" href="#">Participatierol</a></li>
-					          	<li><a class="link--icon--caret" href="#">UpdateFrequentie</a></li>
-					          	<li><a class="link--icon--caret" href="#">TypeDossier</a></li>
-					          	<li><a class="link--icon--caret" href="#">StatusVlaamsCode</a></li>
-					          	<li><a class="link--icon--caret" href="#">StatusVlaamsFase</a></li>
-					          	<li><a class="link--icon--caret" href="#">StatusEDRL</a></li>
-					        </ul>
-					        <ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-					        	<li class="u-hr"><h5 class="h5">Melding Basis</h5></li>
-					          	<li><a class="link--icon--caret" href="#">Rol</a></li>
-					          	<li><a class="link--icon--caret" href="#">StatusType</a></li>
-					          	<li><a class="link--icon--caret" href="#">Meldingstype</a></li>
-					          	<li><a class="link--icon--caret" href="#">Datatype</a></li>
-					        </ul>
-					        <ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-					        	<li class="u-hr"><h5 class="h5">Persoon Profiel</h5></li>
-					          	<li><a class="link--icon--caret" href="#">ProfielStatus</a></li>
-					          	<li><a class="link--icon--caret" href="#">AdresVoorstellingType</a></li>
-					          	<li><a class="link--icon--caret" href="#">BurgelijkeStaatType</a></li>
-					          	<li><a class="link--icon--caret" href="#">TaalType</a></li>
-					        </ul>
-					        <ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-					        	<li class="u-hr"><h5 class="h5">Notificatie Profiel</h5></li>
-					          	<li><a class="link--icon--caret" href="#">StatusNotificatie</a></li>
-					          	<li><a class="link--icon--caret" href="#">PermissieType</a></li>
-					          	<li><a class="link--icon--caret" href="#">Notificiatiekanaal</a></li>
-					          	<li><a class="link--icon--caret" href="#">NotificatieType</a></li>
-					        </ul>
-					        <ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-					        	<li class="u-hr"><h5 class="h5">Vastgoed Basis</h5></li>
-					          	<li><a class="link--icon--caret" href="#">FunctieCodelijst</a></li>
-					          	<li><a class="link--icon--caret" href="#">GebouweenheidStatusCodelijst</a></li>
-					        </ul>
-					        
-					        <!-- end component -->
 
+							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
+								<li class="u-hr"><h5 class="h5">Dienstverlening Transactiemodel</h5></li>
+								<li><a class="link--icon--caret" href="#">Participatierol</a></li>
+								<li><a class="link--icon--caret" href="#">UpdateFrequentie</a></li>
+								<li><a class="link--icon--caret" href="#">TypeDossier</a></li>
+								<li><a class="link--icon--caret" href="#">StatusVlaamsCode</a></li>
+								<li><a class="link--icon--caret" href="#">StatusVlaamsFase</a></li>
+								<li><a class="link--icon--caret" href="#">StatusEDRL</a></li>
+							</ul>
+
+							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
+								<li class="u-hr"><h5 class="h5">Melding Basis</h5></li>
+								<li><a class="link--icon--caret" href="#">Rol</a></li>
+								<li><a class="link--icon--caret" href="#">StatusType</a></li>
+								<li><a class="link--icon--caret" href="#">Meldingstype</a></li>
+								<li><a class="link--icon--caret" href="#">Datatype</a></li>
+							</ul>
+
+							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
+								<li class="u-hr"><h5 class="h5">Persoon Profiel</h5></li>
+								<li><a class="link--icon--caret" href="#">ProfielStatus</a></li>
+								<li><a class="link--icon--caret" href="#">AdresVoorstellingType</a></li>
+								<li><a class="link--icon--caret" href="#">BurgelijkeStaatType</a></li>
+								<li><a class="link--icon--caret" href="#">TaalType</a></li>
+							</ul>
+
+							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
+								<li class="u-hr"><h5 class="h5">Notificatie Profiel</h5></li>
+								<li><a class="link--icon--caret" href="#">StatusNotificatie</a></li>
+								<li><a class="link--icon--caret" href="#">PermissieType</a></li>
+								<li><a class="link--icon--caret" href="#">Notificiatiekanaal</a></li>
+								<li><a class="link--icon--caret" href="#">NotificatieType</a></li>
+							</ul>
+
+							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
+								<li class="u-hr"><h5 class="h5">Vastgoed Basis</h5></li>
+								<li><a class="link--icon--caret" href="#">FunctieCodelijst</a></li>
+								<li><a class="link--icon--caret" href="#">GebouweenheidStatusCodelijst</a></li>
+							</ul>
+							<!-- end component -->
+						</div>
 					</div>
-				</div>
 				</div>
 			</section>
 
