--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -217,7 +217,7 @@
 							<a class="spotlight" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data">
 							<article>
 								<header class="spotlight__header">
-									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="file:///C:/Users/vandeloc/Documents/Documents/AIV/AIV%20-%20PwC%20GitHub/data.vlaanderen.be/images/map-small.png">
+									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="https://github.com/pwc-technology-be/oslo/blob/master/data.vlaanderen.be/images/map-small.png">
 									</div>
 
 
@@ -238,7 +238,7 @@
 							<a class="spotlight" href="http://lokaalbestuur.vlaanderen.be/lokale-besluiten-als-gelinkte-open-data">
 							<article>
 								<header class="spotlight__header">
-									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="file:///C:/Users/vandeloc/Documents/Documents/AIV/AIV%20-%20PwC%20GitHub/data.vlaanderen.be/images/files-small.png">
+									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="https://github.com/pwc-technology-be/oslo/blob/master/data.vlaanderen.be/images/files-small.png">
 									</div>
 
 
