update titel data.vlaanderen.be/ns

--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -36,7 +36,7 @@
 
 				<div class="layout layout--wide">
 					<div class="content-header__content">
-						<h1 class="content-header__title"><span class="content-header__title__content">Vocabularia en applicatieprofielen</span>
+						<h1 class="content-header__title"><span class="content-header__title__content">Vocabularia, applicatieprofielen en codelijsten</span>
 						</h1>
 					</div>
 				</div>
